dnl Process this file with autoconf to produce a configure script.
AC_INIT(callback.c)

AM_INIT_AUTOMAKE(gms, v1.6)
AM_CONFIG_HEADER(config.h)

dnl Default for GVS and friends.
AC_PREFIX_DEFAULT(/usr/local/trmm/GVBOX)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROGS(perlbin,perl)

dnl Checks for libraries.
if test $prefix = NONE; then
  prefix=$ac_default_prefix
fi
LIBDIRS="-L/usr/X11/lib -L/usr/X11R6/lib -L$prefix/lib -L/usr/local/lib"
dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(X11, XBell,,,$LIBDIRS)
AC_CHECK_LIB(Xpm, xpmNextString,,,$LIBDIRS)
AC_CHECK_LIB(forms, fl_initialize,,,$LIBDIRS)
LIBS="$LIBDIRS $LIBS"

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h strings.h sys/file.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname gettimeofday mktime select socket strdup strstr)

AC_OUTPUT(Makefile images/Makefile)
