AUTOMAKE_OPTIONS = foreign

imagesdir = $(prefix)/$(PACKAGE)/images
images_DATA = cancel.xpm						   clear.xpm \
del_neighbor.xpm				   del_prog.xpm \
delete_job.xpm					   exit.xpm \
exit1.xpm						   get_report.xpm \
neighbors.xpm					   \
options.xpm						   print1.xpm \
print_all.xpm					   print_red.xpm \
print_yellow.xpm				   printer.xpm \
progs.xpm						   ps.xpm \
question.xpm					   report.xpm \
				   reset.xpm \
reset1.xmp						   save.xpm \
save1.xpm						   show_all_data.xpm \
show_detail.xpm					   show_exceeded_threshold.xpm \
test.xpm


EXTRA_DIST = $(images_DATA)